src/QTextEdit.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQTextEditCtor_1(void * parent);
EXTERNC void * SCWQTextEditCtor_1(void * parent);
EXTERNC void QWQTextEditsetReadOnly(void * obj, int8_t  ro);
EXTERNC void QWQTextEdittoPlainText(void * retBuffer, void * obj);
EXTERNC void QWQTextEditsetPlainText(void * obj, char * text);
EXTERNC void QWQTextEditappend(void * obj, char * text);
EXTERNC void QWvalidateCB_QTextEdit(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQTextEditDtor(void *);
EXTERNC void SCWQTextEditDtor(void *);