lib/Qt/QtWidgets/QTextEdit.rakumod


# 
# This file has been automatically generated by RaQt_maker V0.0.7.
# To modify and regenerate it, see the source code available here: 
#         https://github.com/yguillemot/RaQt_maker
# 

use NativeCall;
use Qt::QtWidgets:ver<0.0.7>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QtHelpers:ver<0.0.7>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QtWrappers:ver<0.0.7>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QAbstractScrollArea:ver<0.0.7>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QWidget:ver<0.0.7>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QtBase:ver<0.0.7>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::RQTextEdit:ver<0.0.7>:auth<zef:yguillemot>:api<2>;



class QTextEdit:ver<0.0.7>:auth<zef:yguillemot>:api<2>
    is QAbstractScrollArea
    is QtObject
    does RQTextEdit
    is export {

    multi sub ctor(QtBase $this, QWidget $parent = (QWidget)) {
        my $a1 = ?$parent ?? $parent.address !! QWInt2Pointer(0);
        $this.address = QWQTextEditCtor_1($a1);
        $this.ownedByRaku = True;
    }

    multi sub subClassCtor(QtBase $this, QWidget $parent = (QWidget)) {
        my $a1 = ?$parent ?? $parent.address !! QWInt2Pointer(0);
        $this.address = SCWQTextEditCtor_1($a1);
        $this.ownedByRaku = True;
    }

    method validateCB(Str $m) {
        QWvalidateCB_QTextEdit(self.address, self.id, $m);
    }

    multi sub ctor(QtBase $this, NativeCall::Types::Pointer $p, Bool :$obr = False) {
        # Get access to a preexisting Qt object
        $this.address = $p;
        $this.ownedByRaku = $obr;
    }

    multi sub ctor(|capture) {
        note "QtWidgets ", ::?CLASS.^name,
             " ctor called with unsupported args";
        die "Bad args";
    }

    submethod new(|capture) {
        my QTextEdit $rObj = self.bless;
        ctor($rObj, |capture);
        return $rObj;
    }

    multi sub subClassCtor(|capture) {
        note "QtWidgets subclass ", ::?CLASS.^name,
             " ctor called with unsupported args";
        die "Bad args";
    }

    submethod subClass(|capture) {
        subClassCtor(self, |capture);
        self.validateCallBacks();
    }

    submethod DESTROY {
        if self.ownedByRaku {
            QWQTextEditDtor(self.address);
            self.ownedByRaku = False;
        }
    }

    method setReadOnly(Bool $ro)
    {
        my int8 $a1 = $ro.Int;
        QWQTextEditsetReadOnly(self.address, $a1);
    }

    method toPlainText( --> Str)
    {
        my Pointer $retBuffer = QWStrBufferAlloc;
        QWQTextEdittoPlainText($retBuffer, self.address);
        my Str $returnedString = QWStrBufferRead($retBuffer);
        QWStrBufferFree($retBuffer);
        return $returnedString;
    }

    method setPlainText(Str $text) is QtSlot
    {
        QWQTextEditsetPlainText(self.address, $text);
    }

    method append(Str $text) is QtSlot
    {
        QWQTextEditappend(self.address, $text);
    }

    method textChanged()
        is QtSignal { ... }

}


sub QWQTextEditCtor_1(Pointer)
    returns Pointer is native(&libwrapper) { * }

sub SCWQTextEditCtor_1(Pointer)
    returns Pointer is native(&libwrapper) { * }

sub QWvalidateCB_QTextEdit(Pointer, int32, Str)
    is native(&libwrapper) { * }

sub QWQTextEditDtor(Pointer)
    is native(&libwrapper) { * }

sub QWQTextEditsetReadOnly(Pointer, int8)
    is native(&libwrapper) { * }

sub QWQTextEdittoPlainText(Pointer, Pointer)
    is native(&libwrapper) { * }

sub QWQTextEditsetPlainText(Pointer, Str)
    is native(&libwrapper) { * }

sub QWQTextEditappend(Pointer, Str)
    is native(&libwrapper) { * }

